--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,1 +1,1 @@
-DB_CONN = mongodb+srv://admin_user1:roEL9lGDotuRSF6y@u-bookshop.s70vt.mongodb.net/tododb?retryWrites=true&w=majority
+DB_CONN = add here mongodb conection link
