add frontend for todo app

--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,1 +1,1 @@
-DB_CONN = add here mongodb conection link
+DB_CONN = mongodb+srv://user-123:pntNAqVm0leqq2gr@u-bookshop.s70vt.mongodb.net/tododb?retryWrites=true&w=majority
