--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -9,6 +9,7 @@
   "author": "PrabodAshan",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
